--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ linuxdoc = "^20211220"
 Sphinx = "^5.2.3"
 sphinx-rtd-theme = "^1.0.0"
 m2r2 = "<0.3.3"
-dataclasses = "0.8;python_version<3.7" # already present in python 3.7
+dataclasses = { version = "^0.8", python = "<3.7" } # Existing in python >=3.7
 
 [tool.poetry.plugins."peakrdl.exporters"]
 "markdown" = "peakrdl_markdown.__peakrdl__:Exporter"
